<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogActivity"
    android:background="@drawable/log_main">


    <TextView
        android:id="@+id/tV_sig"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        android:text="@string/tv_vhod_log"
        android:textSize="42sp"
        android:textColor="@color/black"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/email_login"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tV_sig"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/email_log_et"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:hint="@string/password_log_et"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="252dp"
        android:layout_height="66dp"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_vhod_tx"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:backgroundTint="#54638F"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_txt"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:text="@string/creat_akk_tv"
        android:textSize="20sp"
        android:textColor="@color/black"/>

</RelativeLayout>